# lyra

./: .gitignore  CLAUDE.md  README.md  connect-dev.json  connect.json  lyra-analyst-prompt.md  lyra-architecture.md  lyra-router-prompt.md
.claude/: settings.local.json
Bridge/: .env.example  BACKLOG.md  (+37 more)
docs/competitors/Вега/defendend--Claude-ast-index-search/Claude-ast-index-search-main/: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
docs/competitors/Вега/defendend--Claude-ast-index-search/Claude-ast-index-search-main/.claude-plugin/: marketplace.json
docs/competitors/Вега/defendend--Claude-ast-index-search/Claude-ast-index-search-main/.github/workflows/: sync-plugin.yml
docs/competitors/Вега/defendend--Claude-ast-index-search/Claude-ast-index-search-main/benches/: db_bench.rs  parser_bench.rs  pipeline_bench.rs
docs/competitors/Вега/defendend--Claude-ast-index-search/Claude-ast-index-search-main/docs/: setup-guide.md
docs/competitors/Вега/defendend--Claude-ast-index-search/Claude-ast-index-search-main/plugin/.claude-plugin/: plugin.json
docs/competitors/Вега/defendend--Claude-ast-index-search/Claude-ast-index-search-main/plugin/commands/: initialize-csharp.md  initialize-ios.md  initialize-ruby.md  initialize-rust.md
docs/competitors/Вега/defendend--Claude-ast-index-search/Claude-ast-index-search-main/src/: db.rs  indexer.rs
docs/competitors/Вега/defendend--Claude-ast-index-search/Claude-ast-index-search-main/src/commands/: android.rs  grep.rs  ios.rs  management.rs  perl.rs  project_info.rs
docs/competitors/Вега/defendend--Claude-ast-index-search/Claude-ast-index-search-main/src/parsers/: mod.rs  wsdl.rs
docs/competitors/Вега/defendend--Claude-ast-index-search/Claude-ast-index-search-main/tests/: memory_tests.rs
docs/competitors/Вега/defendend--Claude-ast-index-search/Claude-ast-index-search-main/tree-sitter-bsl/: tree-sitter.json
(+501 files in other folders)
