[package]
name = "ast-index"
version = "3.26.1"
edition = "2021"
description = "Fast code search for Android/Kotlin/Java, iOS/Swift/ObjC, Dart/Flutter, Scala, PHP, Perl, Python, Go, C++, and Protocol Buffers projects"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Fast file search (ripgrep internals)
ignore = "0.4"
regex = "1"
grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"

# SQLite + FTS5
rusqlite = { version = "0.31", features = ["bundled-full"] }

# Utilities
walkdir = "2"
anyhow = "1"
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "5"
rayon = "1"
notify = "7"
notify-debouncer-mini = "0.5"
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Tree-sitter AST parsing
tree-sitter = "0.26"
tree-sitter-go = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-java = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-ruby = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-dart = "0.0.4"
tree-sitter-objc = "3.0"
tree-sitter-proto = "0.4"
tree-sitter-scala = "0.24"
tree-sitter-php = "0.24"
tree-sitter-lua = "0.5"
tree-sitter-elixir = "0.3"
tree-sitter-bash = "0.25"
tree-sitter-sql = "0.0.2"
tree-sitter-groovy = "0.1"
tree-sitter-r = "1.2"
fs2 = "0.4.3"

[build-dependencies]
cc = "1"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "db_bench"
harness = false

[[bench]]
name = "pipeline_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
